everything is working except for notes

--- a/public/index.html
+++ b/public/index.html
@@ -3,50 +3,71 @@
   <head>
     <meta charset="UTF-8">
     <title>Scraping With Mongoose</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
+    <style>
+      body { background-color: #164d82 }
+      #wrapper {
+        width: 960px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 5%;
+      }
+      #articles {
+        display: inline-block;
+        overflow: auto;
+        width: 60%;
+        height: 700px;
+        margin: -15%;
+      }
+      #notes {
+        float: right;
+        width: 30%;
+      }
+      textarea, input {
+        display: block;
+        width: 100%;
+        background-color: white;
+      }
+      input {
+        height: 36px;
+        font-size: 24px;
+      }
+      textarea {
+        height: 200px;
+        font-size: 18px;
+      }
+      h1{
+        color:#be2026;
+      }
+      h2{
+        color:#be2026;
+      }
+      .title{
+        margin-left:50%;
+      }
+      .card-body:hover{
+        background-color:#164d82;
+      }
+    </style>
   </head>
   <body>
     <div id="wrapper">
-      <h1>The Charging Buffalo</h1>
-      <h2><i>Get your Buffalo Bills news right here</i></h2>
+      <h1 class="title">Note Scraper</h1>
+      <h2 class="title"><i>If you can do this...the homework should be no problem.</i></h2>
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ 
+    
     <script src="app.js"></script>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   </body>
-
 </html>
-
-<style>
-  body { background-color: #F2F6D0 }
-  #wrapper {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 5%;
-  }
-  #articles {
-    display: inline-block;
-    overflow: auto;
-    width: 60%;
-    height: 700px;
-  }
-  #notes {
-    float: right;
-    width: 30%;
-  }
-  textarea, input {
-    display: block;
-    width: 100%;
-    background-color: #FCF5C7;
-  }
-  input {
-    height: 36px;
-    font-size: 24px;
-  }
-  textarea {
-    height: 200px;
-    font-size: 18px;
-  }
-</style>
