pushing best for now

--- a/public/index.html
+++ b/public/index.html
@@ -77,9 +77,10 @@
   <body>
       <div class="jumbotron jumbotron-fluid bills-backer">
           <div class="container">
+          <img src="data:image/gifbase64R0lGODlhAQABAIAAAAUEBAAAACwAAAAAAQABAAACAkQBADs"/>
             <h1 class="title" style="font-size:46px">The Charging Buffalo</h1>
             <p class="title" style="font-size:28px">Get the latest Bills news and info</p>
-            <button class="btn-primary scrape-btn" href="/scrape">Get News</button>
+            <a href="/scrape" target="_blank"><button class="btn-primary scrape-btn">Get News</button></a>
           </div>
         </div>
     <!-- <div id="wrapper">
